# esp32c3-2023-october-superlab

./: README.md
esp32c3/: Cargo.toml  Embed.toml
esp32c3/.cargo/: config.toml
esp32c3/examples/: blinky.rs  button.rs  monotonic.rs  panic.rs  rtc_time.rs  smartled.rs  uart_echo.rs  uart_echo_split.rs
shared/src/: shift_register.rs
